--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,3 +18,18 @@ jobs:
         with:
           clang-format-version: '14'
       - run: echo "🍏 This job's status is ${{ job.status }}."
+  tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: lukka/get-cmake@latest
+      - name: build
+        run: |
+          mkdir build
+          cd build
+          cmake ../tests
+          cmake --build .
+      - name: run
+        run: |
+          cd build
+          ./Google_Tests_run
