--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: Check format
         uses: jidicula/clang-format-action@v4.5.0
         with:
@@ -25,6 +27,7 @@ jobs:
       - uses: lukka/get-cmake@latest
       - name: build
         run: |
+          ls ${{ github.workspace }}
           mkdir build
           cd build
           cmake ../tests
