--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,9 @@ set(CMAKE_CXX_STANDARD 17)
 add_subdirectory(tests)
 
 add_executable(rubics_cube_solver main.cpp src/Cube.cpp src/Cube.h)
+
+find_package(OpenGL REQUIRED)
+find_package(GLUT REQUIRED)
+
+include_directories(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS})
+target_link_libraries(rubics_cube_solver ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
